fixed promoted link overlapping some menu dropdowns

--- a/scss/new.scss
+++ b/scss/new.scss
@@ -111,7 +111,7 @@ $color_prettyButtonNegativeHoverBG : #fc535a;
 $color_prettyButtonNeutralHoverBG : #ececec;
 $color_prettyButtonPositiveBG : #1ecd97;
 $color_prettyButtonPositiveHoverBG : #22e1a6;
-$color_linkPromotedBG : #EFF7FF;
+$color_linkPromotedBG : lighten($color_darkGray, 20%);
 $color_flairselectorBorder : #e2e2e2;
 $color_blockquoteBorder : #E5E3DA;
 
@@ -2165,7 +2165,7 @@ $color_inv_blockquoteBorder 	: invert($color_blockquoteBorder);
 	.organic-listing {
 		background-color: white !important;
 		padding: 0;
-		z-index: 9999;
+		z-index: 8999;
 		position: relative;
 		margin-bottom: 0px;
 		margin-right: 316px;
